[package]
name = "space-invaders"
version = "1.1.0"
authors = ["Deokhwan Kim"]
description = "space-invaders is an emulator for the Space Invaders arcade machine."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dkim/space-invaders"
keywords = ["space-invaders", "opengl", "luminance"]
categories = ["emulators"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
env_logger = "0.7.1"
glfw = "0.40.0"
i8080 = { git = "https://github.com/dkim/i8080", tag = "1.0.1" }
log = "0.4.11"
luminance = "0.42.0"
luminance-derive = "0.6.2"
luminance-front = "0.3.0"
luminance-glfw = "0.14.1"
luminance-windowing = "0.9.2"
rodio = { version = "0.11.0", default-features = false, features = ["wav"] }
spin_sleep = "1.0.0"
structopt = { version = "0.3.16", features = ["wrap_help"] }
