[package]
name = "space-invaders"
version = "1.1.0"
authors = ["Deokhwan Kim"]
description = "space-invaders is an emulator for the Space Invaders arcade machine."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dkim/space-invaders"
keywords = ["space-invaders", "opengl", "luminance"]
categories = ["emulators"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
env_logger = "0.8.3"
glfw = "0.43.0"
i8080 = { git = "https://github.com/dkim/i8080", tag = "1.0.2" }
log = "0.4.14"
luminance = "=0.46.0"
luminance-derive = "0.9.0"
luminance-front = "=0.6.1"
luminance-gl = "=0.19.0"
luminance-glfw = "=0.18.0"
luminance-std140 = "=0.2.0"
luminance-webgl = "=0.6.0"
rodio = { version = "0.11.0", default-features = false, features = ["wav"] }
spin_sleep = "1.0.0"
structopt = { version = "0.3.21", features = ["wrap_help"] }
